add test app to figure out how to get behavior i want

--- a/iSeg/CMakeLists.txt
+++ b/iSeg/CMakeLists.txt
@@ -221,3 +221,6 @@ IF(APPLE)
 
 	INSTALL_BUNDLE()
 ENDIF()
+
+ADD_EXECUTABLE(test-qgraphicsview test.cpp)
+TARGET_LINK_LIBRARIES(test-qgraphicsview ${QT_QTMAIN_LIBRARY} ${MY_EXTERNAL_LINK_LIBRARIES})
